# rules_microsoft_azure

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
az/: def.bzl  defs.bzl  deps.bzl  repositories.bzl
az/go/cmd/stamper/: BUILD.bazel  stamper.go
az/go/pkg/utils/: BUILD.bazel  utils.go
az/private/: repositories.bzl
az/private/az/: config.bzl
az/private/az/datafactory/: defs.bzl  main.bzl
az/private/common/: BUILD.bazel  common.bzl  resolve.sh.tpl  script.sh.tpl  utils.bzl
az/private/rules/: config.bzl
az/private/rules/datafactory/: helpers.bzl  main.bzl
az/private/rules/storage/: helpers.bzl  main.bzl
az/providers/: providers.bzl
az/toolchain/: BUILD.bazel  BUILD.bazel.tpl  configure.bzl  extensions.bzl  toolchains.bzl  versions.bzl
docs/: az_config.md  az_datafactory.md  az_storage.md
examples/: BUILD.bazel  pipeline.json  trigger.json
examples/datafactory/: BUILD.bazel  pipeline.json
examples/storage/: BUILD.bazel
examples/storage/srcs/: BUILD.bazel  file.txt
examples/storage/srcs/generate/: BUILD.bazel
repositories/: BUILD.bazel  repositories.bzl
toolchain/: BUILD.bazel
toolchain/az/: BUILD.bazel  BUILD.bazel.tpl  configure.bzl  extension.bzl.tpl  toolchain.bzl
tools/: workspace_status.sh
