package(default_visibility = ["//visibility:private"])

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "linux_toolchain",
    target_compatible_with = [
        "@bazel_tools//platforms:linux",
    ],
    toolchain = "@az//:toolchain",
    toolchain_type = "@rules_microsoft_azure//az/toolchain:toolchain_type",
)
