load("@rules_microsoft_azure//az:def.bzl", "az_config", "az_datafactory")

az_datafactory(
    name = "pipeline",
    config = "//examples:dev",
    factory_name = "dev-wus2-datahub-df",
    resource = "pipeline",
    resource_group = "dev-wus2-datahub-rg",
    template = ":pipeline.json",
)

az_datafactory(
    name = "trigger",
    config = "//examples:dev",
    factory_name = "dev-wus2-datahub-df",
    resource = "trigger",
    resource_group = "dev-wus2-datahub-rg",
    template = ":trigger.json",
)

exports_files([
    "pipeline.json",
    "trigger.json",
])
