load("@rules_microsoft_azure//az:defs.bzl", "az_datafactory")

az_datafactory(
    name = "pipeline",
    config = "@dev//:config",
    factory_name = "dev-wus2-datahub-df",
    resource = "pipeline",
    resource_group = "dev-wus2-datahub-rg",
    resource_name = "foo",
    template = ":pipeline.json",
)

az_datafactory(
    name = "trigger",
    config = "@dev//:config",
    factory_name = "dev-wus2-datahub-df",
    resource = "trigger",
    resource_group = "dev-wus2-datahub-rg",
    resource_name = "bar",
    template = ":trigger.json",
)

exports_files([
    "pipeline.json",
    "trigger.json",
])
