load("@rules_microsoft_azure//az:defs.bzl", "az_storage")

filegroup(
    name = "srcs",
    srcs = [
        "//examples/storage/srcs/generate",
    ],
)

az_storage(
    name = "storage",
    srcs = [
        ":srcs",
        "//examples/storage/srcs:file.txt",
    ],
    account_name = "bazelstorageaccount",
    config = "@dev//:config",
    container_name = "tst",
)
