load("@rules_microsoft_azure//az:defs.bzl", "az_storage")

filegroup(
    name = "srcs",
    srcs = [
        "//examples/storage/srcs/generate",
    ],
)

az_storage(
    name = "storage",
    srcs = {
        ":srcs": "",
        "//examples/storage/srcs:file.txt": "/algumacoisa/",
    },
    account_name = "{STABLE_ACCOUNT_NAME}",
    config = "@dev//:config",
    container_name = "{STABLE_CONTAINER_NAME}",
)
